# DJANGOCOURSE

./: .env.docker  .gitignore  Dockerfile  docker-compose.yml  package-lock.json  package.json  pyproject.toml  start-django.sh  tailwind.config.js
djangocourse/: settings.py  urls.py
djangocourse/djangocourse/: settings.py  urls.py
djangocourse/learn/migrations/: 0001_initial.py
djangocourse/templates/app/: home.html
learn/: admin.py  managers.py  models.py  urls.py  views.py
learn/migrations/: 0002_auto_20250622_1446.py  0003_article_creator_alter_article_status_and_more.py  0004_alter_article_content_alter_article_created_at_and_more.py  0005_alter_article_options.py  0006_alter_userprofile_email.py  0007_alter_userprofile_managers_alter_article_status.py
locale/es/LC_MESSAGES/: django.mo  django.po
static/: input.css  output.css
templates/: base.html
templates/account/: login.html  signup.html
templates/allauth/elements/: field.html  h2.html  provider.html
templates/allauth/layouts/: base.html
templates/app/: article_create.html  article_delete.html  article_update.html  base.html  home.html
templates/app/layouts/: base_form.html
