[project]
name = "djangocourse"
version = "0.1.0"
description = ""
authors = [
    {name = "SumanBhandari69",email = "sumanbhandari6969@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=5.2.1,<6.0.0)",
    "django-allauth[socialaccount] (>=65.9.0,<66.0.0)",
    "psycopg (>=3.2.9,<4.0.0)",
    "dj-database-url (>=3.0.0,<4.0.0)"
]

[tool.poetry]
packages = [{include = "djangocourse", from = "src"}]


[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "^5.2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
